# digital-sovereignty

./: .zelda-context.md  Cargo.toml  PAYWALL_DESIGN.md  PLAN.md  README.md  TODO-paywall.md  canister_ids.json  dfx.json  hugo.toml  vercel.json
.cursor/: settings.json
.cursor/snippets/: markdown.json
.github/workflows/: deploy.yml
.templates/: post-template.md
archive/icp/: canister_ids.json
assets/: custom.css
backend/: Cargo.toml  backend.did
backend/src/: auth.rs  email.rs  http.rs  lib.rs  storage.rs  stripe.rs
content/: about.md  privacy.md
data/substack-archive/: email_list.digitalsovereignty.csv  posts.csv  substack_to_hugo_bundles_csv_v6.py
docs/: google-indexing-investigation.md
layouts/: index.xml  robots.txt
layouts/_default/: list.html  single.html
layouts/categories/: list.html  single.html
layouts/partials/: footer.html  newsletter-signup.html
layouts/series/: list.html  term.html
layouts/shortcodes/: newsletter.html
public_test/: 404.html  index.html  index.xml  main.min.css  robots.txt  sitemap.xml
public_test/about/: index.html
public_test/categories/: index.html  index.xml
public_test/posts/: index.html  index.xml
public_test/privacy/: index.html
public_test/series/: index.html  index.xml
scripts/: convert_heic_to_webp.sh  dsc-audit  dsc-init-article  dsc-publish  new-post.sh  publish-post.sh  remove_backup_files.sh  remove_heic_images.sh  session-manager.sh  update_substack_urls.sh  write
static/: email_preview.html  pagination_preview.html  robots.txt
static/js/: paywall.js
(+309 files in other folders)
